# python-postgres-demo

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: bootstrap.sh
src/postgres_demo/: __init__.py  cli.py  config.py  db.py
tests/: test_config.py  test_db.py
