[project]
name = "python-postgres-demo"
version = "0.1.0"
description = "Basic Python repo showcasing uv, src layout, black, ruff, mypy, pytest, and PostgreSQL access"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary,pool]>=3.2,<4.0",
  "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
  "black>=25.1.0,<26.0.0",
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0,<26.0.0",
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postgres_demo"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RET"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["postgres_demo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=postgres_demo --cov-report=term-missing"
